# minio-console

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: index.html
docs-specs/plans/: 2026-04-10-phase1-foundation.md  2026-04-10-phase2a-buckets-objects.md  2026-04-10-phase2b-advanced-buckets-preview.md  2026-04-10-phase3-users-access.md  2026-04-10-phase4-monitoring-terminal.md  2026-04-10-phase5-palette-i18n-cicd.md
docs-specs/specs/: 2026-04-10-minio-console-design.md
docs/_astro/: index.CIrRFDku.css
docs/en/: index.html
docs/es/: index.html
docs/superpowers/specs/: 2026-04-10-mc-binary-bundling-design.md
scripts/: download-mc.ps1  download-mc.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/src/components/: Download.astro  Features.astro  Footer.astro  Header.astro  Hero.astro
site/src/i18n/: ui.ts  utils.ts
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  bucket_config.rs  buckets.rs  connection.rs  mod.rs  monitoring.rs  objects.rs  profiles.rs  terminal.rs
src-tauri/src/config/: credentials.rs  mod.rs  profiles.rs
src-tauri/src/mc/: admin.rs  alias.rs  mod.rs  monitoring.rs  runner.rs
src-tauri/src/models/: types.rs
src-tauri/src/s3/: bucket_config.rs  client.rs  mod.rs  operations.rs
src/components/layout/: app-layout.tsx  footer.tsx  header.tsx  sidebar.tsx
src/components/shared/: breadcrumb.tsx  command-palette.tsx
src/components/ui/: button.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  toast.tsx
src/i18n/: index.ts
src/pages/buckets/: bucket-settings.tsx  create-bucket-dialog.tsx  index.tsx  lifecycle-rules.tsx
src/pages/dashboard/: index.tsx
src/pages/groups/: create-group-dialog.tsx  (+2 more)
src/stores/: admin-store.ts  bucket-config-store.ts  bucket-store.ts  monitoring-store.ts  object-store.ts  profile-store.ts  sidebar-store.ts  theme-store.ts  toast-store.ts
src/styles/: globals.css
(+21 files in other folders)
